# django-basic-auth-ip-whitelist

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  CONTRIBUTORS.txt  MANIFEST.in  README.md  README.rst  SECURITY.rst  ruff.toml  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  test.yml
baipw/: __init__.py  exceptions.py  middleware.py  response.py  utils.py
baipw/tests/: response.py  settings.py  test_integration.py  test_middleware.py  test_response.py  test_utils.py  utils.py
baipw/tests/templates/: test_template.html
