[metadata]
name = django-basic-auth-ip-whitelist
version = attr: baipw.__version__
description = Hide your Django site behind basic authentication mechanism with IP whitelisting support.
long-description = file: README.rst
long-description-content-type = text/x-rst
author = Tomasz Knapik
author_email = hi@tmkn.org
url = https://github.com/tm-kn/django-basic-auth-ip-whitelist
license = BSD 2-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Framework :: Django
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
keywords =
    django
    basic
    authentication
    auth
    ip
    whitelist
    whitelisting
    http

[options]
packages = find:
install_requires =
    Django>=1.8,<4
python_requires = >=3.4

[options.extras_require]
lint =
    isort==4.3.21
    flake8==3.8.3
    black==19.10b0

[options.packages.find]
exclude =
    baipw.tests*

[bdist_wheel]
python-tag = py3

[isort]
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
max-line-length = 120
