[metadata]
name = django-basic-auth-ip-whitelist
version = attr: baipw.__version__
description = Hide your Django site behind basic authentication mechanism with IP whitelisting support.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Torchbox
author_email = hello@torchbox.com
url = https://github.com/torchbox/django-basic-auth-ip-whitelist
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Framework :: Django
    Framework :: Django :: 1.8
    Framework :: Django :: 1.9
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
keywords =
    django
    basic
    authentication
    auth
    ip
    whitelist
    whitelisting
    http

[options]
packages = find:
install_requires =
    Django>=1.8,<6
python_requires = >=3.4

[options.extras_require]
lint =
    isort==5.13.2
    flake8==7.0.0
    black==24.4.2

[options.packages.find]
exclude =
    baipw.tests*

[bdist_wheel]
python-tag = py3

[isort]
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
max-line-length = 120
